# ffmpeg-rtsp

./: .gitignore  CMakeLists.txt  decode.cc  encode.cc  main.cc  main2.cc  opencv_ffmpeg_rtsp.cc  rtsp_receiver.cc  rtsp_receiver.h  rtsp_receiver_main.cc  transcoding.cc  video_debugging.cc  video_debugging.h
